--- a/course/LLM101.ipynb
+++ b/course/LLM101.ipynb
@@ -40,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook is running locally\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +123,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The network infrastructure is robust and usually efficient, though intermittent glitches sometimes hamper productivity and clarity.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Our current infrastructure aligns with business needs, yet occasional rigidity in legacy systems hinders innovative approaches.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>I appreciate the proactive approach to security, though the multi-step authentication process sometimes seems overly complicated.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Our tools maintain high quality with intuitive design and regular updates, even though rare performance lags can hinder productivity.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>The IT-support team is consistently prompt and courteous, though occasional miscommunications lead to fleeting moments of uncertainty.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  \\\n",
+       "0   1   \n",
+       "1   2   \n",
+       "2   3   \n",
+       "3   4   \n",
+       "4   5   \n",
+       "\n",
+       "                                                                                                                                 Feedback  \n",
+       "0     The network infrastructure is robust and usually efficient, though intermittent glitches sometimes hamper productivity and clarity.  \n",
+       "1         Our current infrastructure aligns with business needs, yet occasional rigidity in legacy systems hinders innovative approaches.  \n",
+       "2       I appreciate the proactive approach to security, though the multi-step authentication process sometimes seems overly complicated.  \n",
+       "3   Our tools maintain high quality with intuitive design and regular updates, even though rare performance lags can hinder productivity.  \n",
+       "4  The IT-support team is consistently prompt and courteous, though occasional miscommunications lead to fleeting moments of uncertainty.  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the raw data containing the feedback. There is one row per employee.\n",
     "\n",
@@ -168,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +261,7 @@
     "from dotenv import find_dotenv, load_dotenv\n",
     "import os\n",
     "from IPython.display import Markdown # Pretty output\n",
+    "from devtools import pprint \n",
     "\n",
     "\n",
     "# Get environment variables\n",
@@ -202,9 +287,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIMessage(\n",
+      "    content='Hei! Hvordan kan jeg hjelpe deg i dag?',\n",
+      "    additional_kwargs={\n",
+      "        'refusal': None,\n",
+      "    },\n",
+      "    response_metadata={\n",
+      "        'token_usage': {\n",
+      "            'completion_tokens': 11,\n",
+      "            'prompt_tokens': 9,\n",
+      "            'total_tokens': 20,\n",
+      "            'completion_tokens_details': {\n",
+      "                'accepted_prediction_tokens': 0,\n",
+      "                'audio_tokens': 0,\n",
+      "                'reasoning_tokens': 0,\n",
+      "                'rejected_prediction_tokens': 0,\n",
+      "            },\n",
+      "            'prompt_tokens_details': {\n",
+      "                'audio_tokens': 0,\n",
+      "                'cached_tokens': 0,\n",
+      "            },\n",
+      "        },\n",
+      "        'model_name': 'gpt-4o-mini-2024-07-18',\n",
+      "        'system_fingerprint': 'fp_57db37749c',\n",
+      "        'prompt_filter_results': [\n",
+      "            {\n",
+      "                'prompt_index': 0,\n",
+      "                'content_filter_results': {\n",
+      "                    'hate': {\n",
+      "                        'filtered': False,\n",
+      "                        'severity': 'safe',\n",
+      "                    },\n",
+      "                    'self_harm': {\n",
+      "                        'filtered': False,\n",
+      "                        'severity': 'safe',\n",
+      "                    },\n",
+      "                    'sexual': {\n",
+      "                        'filtered': False,\n",
+      "                        'severity': 'safe',\n",
+      "                    },\n",
+      "                    'violence': {\n",
+      "                        'filtered': False,\n",
+      "                        'severity': 'safe',\n",
+      "                    },\n",
+      "                },\n",
+      "            },\n",
+      "        ],\n",
+      "        'finish_reason': 'stop',\n",
+      "        'logprobs': None,\n",
+      "        'content_filter_results': {\n",
+      "            'hate': {\n",
+      "                'filtered': False,\n",
+      "                'severity': 'safe',\n",
+      "            },\n",
+      "            'self_harm': {\n",
+      "                'filtered': False,\n",
+      "                'severity': 'safe',\n",
+      "            },\n",
+      "            'sexual': {\n",
+      "                'filtered': False,\n",
+      "                'severity': 'safe',\n",
+      "            },\n",
+      "            'violence': {\n",
+      "                'filtered': False,\n",
+      "                'severity': 'safe',\n",
+      "            },\n",
+      "        },\n",
+      "    },\n",
+      "    id='run-26333cdf-c4e6-49f2-881c-ac779dba3fd3-0',\n",
+      "    usage_metadata={\n",
+      "        'input_tokens': 9,\n",
+      "        'output_tokens': 11,\n",
+      "        'total_tokens': 20,\n",
+      "        'input_token_details': {\n",
+      "            'audio': 0,\n",
+      "            'cache_read': 0,\n",
+      "        },\n",
+      "        'output_token_details': {\n",
+      "            'audio': 0,\n",
+      "            'reasoning': 0,\n",
+      "        },\n",
+      "    },\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate the prompt\n",
     "prompt = 'Hei!'\n",
@@ -993,63 +1167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Løsningsforslag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {"colab":{
-    "collapsed": true
-   }},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 1. Prompt Template\n",
-    "summary_prompt = PromptTemplate.from_template(\"\"\"\n",
-    "You are a domain expert in internal IT operations and organizational analysis. You will be provided with a dataset containing qualitative feedback from employees in an IT company. \n",
-    "Each row in the dataset represents a feedback entry and is associated with a specific category.\n",
-    "\n",
-    "For each category, carefully:\n",
-    "1. Read and interpret the feedback entries assigned to that category.\n",
-    "2. Identify core themes, recurring patterns, and contrasting opinions within that category.\n",
-    "3. Evaluate the feedback logically: What are the likely underlying causes of recurring issues or praises? Are there signs of systemic problems, isolated incidents, or misaligned expectations?\n",
-    "4. Summarize each category in 3 to 6 bullet points, highlighting key sentiments (positive and negative), representative concerns or compliments, and any significant outliers\n",
-    "\n",
-    "Present your findings in a clean, professional way with one section per category. \n",
-    "\n",
-    "This is the employee feedback data: {survey_results}\n",
-    "\"\"\")\n",
-    "\n",
-    "# 2. Class for structured output\n",
-    "class SummarizeFeedback(BaseModel):\n",
-    "    \"Summary of the different categorizes recognized in the feedback from an IT-survey.\"\n",
-    "    summary : str = Field(\n",
-    "        description=\"For each category: Category name and 3-6 bullet points summarizing the category.\"\n",
-    "    )\n",
-    "\n",
-    "# 3. Summary-chain\n",
-    "summary_chain_structured_output = summary_prompt | llm.with_structured_output(\n",
-    "    SummarizeFeedback,\n",
-    "    method=\"json_schema\",\n",
-    "    strict=True,\n",
-    ")\n",
-    "\n",
-    "# 4: Call the model with the dataset from the survey\n",
-    "summary = summary_chain_structured_output.invoke({\"survey_results\": df})\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A nice way to show the output from the model\n",
-    "from IPython.display import Markdown\n",
-    "\n",
-    "display(Markdown(summary.summary))"
+    "Her finnes det et løsningsforslag hvis du trenger det! Se [solution_summarize.py](https://github.com/bearingpoint-no/LLM101/blob/main/course/solution_summarize.py)"
    ]
   },
   {
@@ -1092,87 +1210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Løsningsforslag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab":{
-    "collapsed": true
-   }
-},
-   "outputs": [],
-   "source": [
-    "# 1. Prompt Template\n",
-    "report_prompt = PromptTemplate.from_template(\"\"\"\n",
-    "You are an expert HR and technical operations analyst. I will provide you with a dataset of employee feedback collected from an IT company.\n",
-    "\n",
-    "Your task is to deeply analyze this feedback and generate a concise executive-level summary report in markdown format that includes:\n",
-    "\n",
-    "1. Key Takeaways\n",
-    "Provide a short summary of the overall feedback in 3-5 bullet points. Focus only on the main issues or areas of satisfaction.\n",
-    "Include both positive and negative themes, but prioritize the most important and impactful points.\n",
-    "Limit each point to 1-2 sentences.\n",
-    "Before finalizing each point, take a moment to reflect on why each issue might be present (e.g., systemic problems, temporary issues, resource constraints, etc.)\n",
-    "\n",
-    "2. Suggested Improvements\n",
-    "Based on the overall feedback, propose 2-3 high-level, actionable measures that the company could take to address the most pressing issues and enhance overall performance or satisfaction.\n",
-    "Each suggestion should be brief, directly tied to the feedback, and strategic in nature.\n",
-    "Think about short-term vs long-term solutions and consider the feasibility of each suggestion.\n",
-    "\n",
-    "3. Output\n",
-    "Present your findings in a structured way with clear section headings, bullet points for easy scanning, and a consise, direct and professional tone suitable for leadership review.\n",
-    "\n",
-    "This is the employee feedback data: {summary_text}\n",
-    "\"\"\")\n",
-    "\n",
-    "# 2. Class for structured output\n",
-    "class ReportForLeadership(BaseModel):\n",
-    "    \"Raport for the leadership of an IT-company on results of an internal IT-survey.\"\n",
-    "    snappy_title : str = Field(\n",
-    "        description=\"A fitting title for the report. Must begin with '# ' to ensure easy markdown formatting.\"\n",
-    "    )\n",
-    "    intro : str = Field(\n",
-    "        description=\"1 sentence describing thepurpose of the report.\" \n",
-    "    )\n",
-    "    key_takeaways : str = Field(\n",
-    "        description=\"3-5 bulletpoints describing the key-takeaways. Limit each point to 1-2 sentences.\" \n",
-    "    )\n",
-    "    suggested_improvements : str = Field(\n",
-    "        description=\"2-3 actionable measures for the company. Keep it brief.\"\n",
-    "    )\n",
-    "    outro: str = Field(\n",
-    "        description=\"1 sentence ending for the report. Be creative.\" \n",
-    "    )\n",
-    "\n",
-    "# 3. Report-chain\n",
-    "report_chain_structured_output = report_prompt | llm.with_structured_output(\n",
-    "    ReportForLeadership,\n",
-    "    method=\"json_schema\",\n",
-    "    strict=True,\n",
-    ")\n",
-    "\n",
-    "# 4. Create report \n",
-    "report = report_chain_structured_output.invoke({\"summary_text\": summary.summary})\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(Markdown(\n",
-    "    \"\\n\\n\".join([report.snappy_title,\n",
-    "                 report.intro,\n",
-    "                 '## Key-takeaways',report.key_takeaways,\n",
-    "                 '## Suggested improvements',report.suggested_improvements,\n",
-    "                 report.outro])\n",
-    "                 \n",
-    "))"
+    "Her finnes det et løsningsforslag hvis du trenger det! Se [solution_report.py](https://github.com/bearingpoint-no/LLM101/blob/main/course/solution_report.py)"
    ]
   },
   {
