mindre flytting av ting for god flow

--- a/course/LLM101.ipynb
+++ b/course/LLM101.ipynb
@@ -25,16 +25,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Oppgave\n",
-    "Du jobber i et IT-selskap og har fått i oppgave å analysere svarene fra en intern medarbeiderundersøkelse. Undersøkelsen er anonym og du har fått tilsendt en CSV-fil med 50 tilbakemeldinger, én per ansatt. Målet er å finne ut hva folk er fornøyde eller misfornøyde med, og særlig se nærmere på temaene Nettverk, Opplæring og IT-support, som ledelsen har gitt beskjed om at har vært sentrale temaer i undersøkelser de har sendt ut tidligere. Tilbakemeldinger som ikke passer i disse kategoriene skal også få sin plass. Til slutt skal du lage en oppsummering som kan sendes til ledelsen.\n",
-    "\n",
-    "For å jobbe effektivt bruker du en språkmodell til å hjelpe deg med både kategorisering og oppsummering.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Installer nødvendige pakker for kurset"
    ]
   },
@@ -105,6 +95,16 @@
     "else:\n",
     "    AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Oppgave\n",
+    "Du jobber i et IT-selskap og har fått i oppgave å analysere svarene fra en intern medarbeiderundersøkelse. Undersøkelsen er anonym og du har fått tilsendt en CSV-fil med 50 tilbakemeldinger, én per ansatt. Målet er å finne ut hva folk er fornøyde eller misfornøyde med, og særlig se nærmere på temaene Nettverk, Opplæring og IT-support, som ledelsen har gitt beskjed om at har vært sentrale temaer i undersøkelser de har sendt ut tidligere. Tilbakemeldinger som ikke passer i disse kategoriene skal også få sin plass. Til slutt skal du lage en oppsummering som kan sendes til ledelsen.\n",
+    "\n",
+    "For å jobbe effektivt bruker du en språkmodell til å hjelpe deg med både kategorisering og oppsummering.\n"
    ]
   },
   {
@@ -234,25 +234,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### En vanlig LLM-spørring\n",
-    "Enkle LLM-spørringer er bygget opp av noen sentrale deler:\n",
-    "\n",
-    "1. Tilkobling til en ressurs, som feks. Azure OpenAI\n",
-    "\n",
-    "2. En prompt, som vil si en tekstbasert forespørsel/instruks\n",
-    "\n",
-    "3. Sending av prompt til språkmodellen for å hente en respons\n",
-    "\n",
-    "\n",
-    "Som en del av tilkoblingen er det vanlig å oppgi en temperaturparameter. Denne parameteren sier noe om hvor kreativ modellen kan være i responsen sin, og måles numerisk fra 0 og oppover. Hvis parameteren settes til en verdi rundt 0 tillater du liten grad av \"randomness\", og modellen vil alltid velge ordet med høyest sannsynlighet for å være riktig når den skal generere en respons. Hvis den derimot settes til en verdi nærmere 1 tillater du større grad av kreativitet og \"randomness\", og modellen kan velge ord som ikke alltid har høyest sannsynlighet for å være riktig i teksten den svarer med. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +244,7 @@
     "from dotenv import find_dotenv, load_dotenv\n",
     "import os\n",
     "from IPython.display import Markdown # Pretty output\n",
-    "from devtools import pprint \n",
+    "from devtools import pprint # Pretty output\n",
     "\n",
     "\n",
     "# Get environment variables\n",
@@ -276,6 +259,23 @@
     "    api_version=OPENAI_API_VERSION,\n",
     "    temperature=0,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### En vanlig LLM-spørring\n",
+    "Enkle LLM-spørringer er bygget opp av noen sentrale deler:\n",
+    "\n",
+    "1. Tilkobling til en ressurs, som feks. Azure OpenAI\n",
+    "\n",
+    "2. En prompt, som vil si en tekstbasert forespørsel/instruks\n",
+    "\n",
+    "3. Sending av prompt til språkmodellen for å hente en respons\n",
+    "\n",
+    "\n",
+    "Som en del av tilkoblingen er det vanlig å oppgi en temperaturparameter. Denne parameteren sier noe om hvor kreativ modellen kan være i responsen sin, og måles numerisk fra 0 og oppover. Hvis parameteren settes til en verdi rundt 0 tillater du liten grad av \"randomness\", og modellen vil alltid velge ordet med høyest sannsynlighet for å være riktig når den skal generere en respons. Hvis den derimot settes til en verdi nærmere 1 tillater du større grad av kreativitet og \"randomness\", og modellen kan velge ord som ikke alltid har høyest sannsynlighet for å være riktig i teksten den svarer med. "
    ]
   },
   {
