--- a/course/spraakmodeller_for_alle.ipynb
+++ b/course/spraakmodeller_for_alle.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LLM for alle - Introduksjonskurs til språkmodeller med Python og Azure OpenAI"
+    "# Språkmodeller for alle \n",
+    "### *Et Introduksjonskurs til språkmodeller med Python og Azure OpenAI*"
    ]
   },
   {
@@ -13,9 +14,9 @@
    "source": [
     "# Introduksjon\n",
     "\n",
-    "Under et prosjekt vi gjorde da vi satt på benk i høst fikk vi hands-on erfaring med å utvikle og bruke språkmodeller (LLMer) i praksis. Vi så hvordan slike modeller kan hjelpe med å spare tid, redusere kostnader og automatisere manuelle oppgaver på en måte som enkelt kan gjenbrukes i andre prosjekter.\n",
+    "Under et prosjekt vi hadde i høst fikk vi hands-on erfaring med å utvikle og bruke språkmodeller (LLMer) i praksis. Vi så hvordan slike modeller kan hjelpe med å spare tid, redusere kostnader og automatisere manuelle oppgaver på en måte som enkelt kan gjenbrukes i andre prosjekter.\n",
     "\n",
-    "I dette kurset ser vi på et konkret og gjenkjennbart case: analyse av resultatene fra en medarbeiderundersøkelse. Dette er en oppgave som kan være vanskelig å strukturere og som kan være ekstremt tidkrevende å gjøre for hånd når det er store volum av tilbakemeldinger. Vi skal lære dere å koble dere til en LLM via API, bruke LangChain Expression Language (LCEL) til å bygge AI-kjeder og hente ut strukturert innsikt med Pydantic, alt i én oversiktlig notebook.\n"
+    "I denne workshoppen ser vi på et konkret og gjenkjennbart case: analyse av resultatene fra en medarbeiderundersøkelse. Dette er en oppgave som kan være vanskelig å strukturere og som kan være ekstremt tidkrevende å gjøre for hånd når det er store volum av tilbakemeldinger. Vi skal lære dere å koble dere til en LLM via API, bruke LangChain Expression Language (LCEL) til å bygge AI-kjeder og hente ut strukturert innsikt med Pydantic, alt i én oversiktlig notebook.\n"
    ]
   },
   {
@@ -986,9 +987,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Din tur!\n",
+    "## Fantastisk! \n",
+    "Du har nå fullført kurset *LLM for alle*, og jobbet deg gjennom hvordan du kan koble deg til språkmodeller via API-er, hvordan du kan skrive LCEL for å lage gjenbrukbare prompt-maler og AI-kjeder, hvordan du kan sikre presise svar med structured output og sett på oppgaver der det kan være nyttig å bruke en resonneringsmodell fremfor en vanlig språkmodell. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hva nå?\n",
     "\n",
-    "Nå som kategoriseringen er gjennomført, og vi har forsikret oss om at alle radene har fått en passende kategori, kan vi gå videre til neste oppgave. Her er målet å samle informasjonen fra kategoriseringen til en overordnet oversikt. Lag en LCEL-kjede som tar resultatet fra forrige oppgave og oppsummerer per kategori ved hjelp av en LLM. Inkluder structured output. "
+    "Nå som kategoriseringen er gjennomført, og vi har forsikret oss om at alle radene har fått en passende kategori, kan vi gå videre til neste oppgave. Her er målet å samle informasjonen fra kategoriseringen til en overordnet oversikt. Lag en LCEL-kjede som tar resultatet fra forrige oppgave og oppsummerer per kategori ved hjelp av en LLM. Inkluder structured output. SKRIV OM"
    ]
   },
   {
@@ -997,63 +1006,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tip 1: Create a good prompt! Use this to reflect on what the end goal is.\n",
-    "prompt = PromptTemplate.from_template(\"\"\"\n",
-    "Well, how should I phrase this? Shouldn't there be some data included here as well?\n",
-    "\"\"\")\n",
+    "# Oppsummer innsikten\n",
     "\n",
-    "# Tip 2: Can you create a class that inherits from BaseModel to make this easier?\n",
-    "class SummarizeFeedback(BaseModel):\n",
-    "    \"Description...\"\n",
-    "    summary: str = ...\n",
+    "# 1. Prompt Template\n",
+    "summary_prompt = PromptTemplate.from_template(\"\"\"\n",
+    "You are a domain expert in internal IT operations and organizational analysis. You will be provided with a dataset containing qualitative feedback from employees in an IT company. \n",
+    "Each row in the dataset represents a feedback entry and is associated with a specific category.\n",
     "\n",
-    "# Tip 3: Time to create the chain\n",
-    "summary_chain_structured_output = ...\n",
+    "For each category, carefully:\n",
+    "1. Read and interpret the feedback entries assigned to that category.\n",
+    "2. Identify core themes, recurring patterns, and contrasting opinions within that category.\n",
+    "3. Evaluate the feedback logically: What are the likely underlying causes of recurring issues or praises? Are there signs of systemic problems, isolated incidents, or misaligned expectations?\n",
+    "4. Summarize each category in 3 to 6 bullet points, highlighting key sentiments (positive and negative), representative concerns or compliments, and any significant outliers\n",
     "\n",
-    "# Tip 4: Call the model with the dataset from the survey\n",
-    "summary = ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Her finnes det et løsningsforslag hvis du trenger det! Se [solution_summarize.py](https://github.com/bearingpoint-no/LLM101/blob/main/course/solution_summarize.py)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Rapport til ledelsen\n",
+    "Present your findings in a clean, professional way with one section per category. \n",
     "\n",
-    "I siste oppgave skal vi bruke oppsummeringen vi nettopp lagde til å generere en rapport som kan sendes til ledelsen. Rapporten skal gi mottakerne en oversikt over de viktigste punktene i medarbeideundersøkelsen og komme med noen forslag til endringer som kan skape forbedringer til neste år. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Oppgave \n",
-    "report_prompt = PromptTemplate.from_template(\"\"\"\n",
-    "Bla bla bla\n",
+    "This is the employee feedback data: {survey_results}\n",
     "\"\"\")\n",
     "\n",
     "# 2. Class for structured output\n",
-    "class ReportForLeadership(BaseModel):\n",
-    "    \"Raport for the leadership of an IT-company on results of an internal IT-survey.\"\n",
-    "    snappy_title : str = Field(\n",
-    "        description=\"A fitting title for the report. Must begin with '# ' to ensure easy markdown formatting.\"\n",
+    "class SummarizeFeedback(BaseModel):\n",
+    "    \"Summary of the different categorizes recognized in the feedback from an IT-survey.\"\n",
+    "    summary : str = Field(\n",
+    "        description=\"For each category: Category name and 3-6 bullet points summarizing the category.\"\n",
     "    )\n",
-    "    key_takeaway:str = ...\n",
     "\n",
-    "# 3. Report-chain\n",
-    "report_chain_structured_output = ...\n",
+    "# 3. Summary-chain\n",
+    "summary_chain_structured_output = summary_prompt | llm.with_structured_output(\n",
+    "    SummarizeFeedback,\n",
+    "    method=\"json_schema\",\n",
+    "    strict=True,\n",
+    ")\n",
     "\n",
-    "# 4. Kall modellen med oppsummeringen av kategoriene\n",
-    "report = ...\n",
+    "# 4: Call the model with the dataset from the survey\n",
+    "summary = summary_chain_structured_output.invoke({\"survey_results\": df})\n",
+    "\n",
+    "# A nice way to show the output from the model\n",
+    "display(Markdown(summary.summary))\n",
     "\n"
    ]
   },
@@ -1061,51 +1050,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Her finnes det et løsningsforslag hvis du trenger det! Se [solution_report.py](https://github.com/bearingpoint-no/LLM101/blob/main/course/solution_report.py)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fantastisk! \n",
-    "Du har nå fullført kurset *LLM for alle*, og jobbet deg gjennom hvordan du kan koble deg til språkmodeller via API-er, hvordan du kan skrive LCEL for å lage gjenbrukbare prompt-maler og AI-kjeder, hvordan du kan sikre presise svar med structured output og sett på oppgaver der det kan være nyttig å bruke en resonneringsmodell fremfor en vanlig språkmodell. Godt jobbet, og takk for at du deltok!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Ekstraoppgave: Hvordan kunne vi gjort dette bedre?\n",
+    "# Til ettertanke\n",
     "\n",
-    "Anta at du har fått levert resultatene fra denne spørreundersøkelsen i fanget av en stressa mellomleder som ber deg levere en rapport han kan presentere ledelsen. \n",
-    "Gitt verktøyene du har fått en innføring i gjennom dette kursene (og kanskje andre erfaringer?), hvordan ville du løst oppgaven?\n",
-    "\n",
-    "Ser du for eksempel noe som kunne vært forbedret i\n",
-    "- Rekkefølgen på måten vi leter etter kategorier?\n",
-    "- Legger vi får mye/lite vekt på inputen vi fikk om hva ledelsen \"tror\" kategoriene kommer til å være?\n",
-    "- Er vi for \"strenge\" når vi ber modellen finne kategorier? Kan man gjøre endringer for å plukke opp flere nyanser?\n",
-    "- Promptingen?\n",
-    "- Variablene eller type hintingen i pydantic-klassene?\n",
-    "\n",
-    "Ville du kanskje gjort det helt annerledes? \n",
-    "Now's your chance to try!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prøv deg frem :))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hva er risikoene ved bruk av LLM til denne typen analyse?\n",
+    "## Hva er risikoene ved bruk av LLM til denne typen analyse?\n",
     "Ved bruk av store språkmodeller (LLM) til analyse av åpne tekstsvar i spørreundersøkelser er risikoen generelt lavere enn i mer kritiske anvendelser som faktagenerering eller beslutningsstøtte. Likevel finnes det enkelte utfordringer som bør tas på alvor for å sikre kvalitet og transparens i analysen.\n",
     " \n",
     "#### Skjevheter og bias\n",
