endelig versjon av notebook

--- a/course/MSD_workshop.ipynb
+++ b/course/MSD_workshop.ipynb
@@ -28,13 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "This notebook is running locally\n"
      ]
     }
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +84,7 @@
        "'\\nif is_colab():\\n    from getpass import getpass\\n    AZURE_OPENAI_API_KEY = getpass(\"AZURE_OPENAI_API_KEY: \")\\nelse:\\n    AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +211,7 @@
        "4  The IT-support team is consistently prompt and courteous, though occasional miscommunications lead to fleeting moments of uncertainty.  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +276,7 @@
     ")\n",
     "\"\"\"\n",
     "llm = AzureChatOpenAI(\n",
-    "    azure_endpoint= \"https://be-no-make-data-smart-llm-course-2025.openai.azure.com\",\n",
+    "    azure_endpoint= AZURE_OPENAI_ENDPOINT,\n",
     "    azure_deployment=\"gpt-5\",\n",
     "    model=\"gpt-5\",\n",
     "    api_key=AZURE_OPENAI_API_KEY,\n",
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,18 +319,18 @@
      "output_type": "stream",
      "text": [
       "AIMessage(\n",
-      "    content='Hei! Hvordan kan jeg hjelpe deg i dag?',\n",
+      "    content='Hei! Hva kan jeg hjelpe deg med i dag?',\n",
       "    additional_kwargs={\n",
       "        'refusal': None,\n",
       "    },\n",
       "    response_metadata={\n",
       "        'token_usage': {\n",
-      "            'completion_tokens': 84,\n",
+      "            'completion_tokens': 213,\n",
       "            'prompt_tokens': 8,\n",
-      "            'total_tokens': 92,\n",
+      "            'total_tokens': 221,\n",
       "            'completion_tokens_details': {\n",
       "                'audio_tokens': 0,\n",
-      "                'reasoning_tokens': 64,\n",
+      "                'reasoning_tokens': 192,\n",
       "                'accepted_prediction_tokens': 0,\n",
       "                'rejected_prediction_tokens': 0,\n",
       "            },\n",
@@ -383,18 +385,18 @@
       "            },\n",
       "        },\n",
       "    },\n",
-      "    id='run-569c6715-32e2-41a9-9cfc-8977b43ee737-0',\n",
+      "    id='run-2b759fe1-3aa5-44fb-a00d-dfbc572f64e1-0',\n",
       "    usage_metadata={\n",
       "        'input_tokens': 8,\n",
-      "        'output_tokens': 84,\n",
-      "        'total_tokens': 92,\n",
+      "        'output_tokens': 213,\n",
+      "        'total_tokens': 221,\n",
       "        'input_token_details': {\n",
       "            'audio': 0,\n",
       "            'cache_read': 0,\n",
       "        },\n",
       "        'output_token_details': {\n",
       "            'audio': 0,\n",
-      "            'reasoning': 64,\n",
+      "            'reasoning': 192,\n",
       "        },\n",
       "    },\n",
       ")\n"
@@ -414,16 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hei! Hvordan kan jeg hjelpe deg i dag?'"
+       "'Hei! Hva kan jeg hjelpe deg med i dag?'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
