--- a/course/MDS_spraakmodeller_for_alle.ipynb
+++ b/course/MDS_spraakmodeller_for_alle.ipynb
@@ -71,24 +71,21 @@
    "source": [
     "import os\n",
     "\n",
+    "AZURE_OPENAI_ENDPOINT=\"https://be-no-genai-internal-project-openai.openai.azure.com\"\n",
+    "OPENAI_API_VERSION=\"2025-02-01-preview\"\n",
+    "AZURE_OPENAI_DEPLOYMENT_O4 = \"o4-mini\" # Reasoning LLM\n",
+    "OPENAI_MODEL_O4 = \"o4-mini-2025-04-06\"\n",
+    " \n",
+    "AZURE_OPENAI_DEPLOYMENT_4O = \"gpt-4o-mini\" # Non-reasoning LLM\n",
+    "OPENAI_MODEL_4O = \"gpt-4o-mini-2024-07-18\"\n",
+    " \n",
+    "\n",
+    "\n",
     "if is_colab():\n",
     "    from getpass import getpass\n",
     "    AZURE_OPENAI_API_KEY = getpass(\"AZURE_OPENAI_API_KEY: \")\n",
-    "    OPENAI_API_VERSION  = getpass(\"OPENAI_API_VERSION: \")\n",
-    "    AZURE_OPENAI_DEPLOYMENT_O4 =  getpass(\"AZURE_OPENAI_DEPLOYMENT_O4: \")\n",
-    "    AZURE_OPENAI_DEPLOYMENT_4O =  getpass(\"AZURE_OPENAI_DEPLOYMENT_4O: \")\n",
-    "    OPENAI_MODEL_O4 =  getpass(\"OPENAI_MODEL_O4: \")\n",
-    "    OPENAI_MODEL_4O =  getpass(\"OPENAI_MODEL_4O: \")\n",
-    "    AZURE_OPENAI_ENDPOINT = getpass(\"AZURE_OPENAI_ENDPOINT: \")\n",
-    "\n",
     "else:\n",
-    "    AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
-    "    OPENAI_API_VERSION = os.getenv(\"OPENAI_API_VERSION\")\n",
-    "    AZURE_OPENAI_DEPLOYMENT_O4 = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_O4\")\n",
-    "    AZURE_OPENAI_DEPLOYMENT_4O = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_4O\")\n",
-    "    OPENAI_MODEL_O4 = os.getenv(\"OPENAI_MODEL_O4\")\n",
-    "    OPENAI_MODEL_4O = os.getenv(\"OPENAI_MODEL_4O\")\n",
-    "    AZURE_OPENAI_ENDPOINT = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n"
+    "    AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n"
    ]
   },
   {
